# transactions-backend

./: .dockerignore  Dockerfile  manage.py  pyproject.toml
bank_account/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
bank_account/management/commands/: readcsv.py
bank_account/migrations/: 0001_initial.py  0002_transaction_is_counter_to_transaction_is_ignored.py  0003_transaction_is_imported.py  0004_recordproxy_alter_transaction_options_and_more.py  0005_transaction_is_ready.py  0006_remove_transaction_is_imported.py  0007_alter_recordproxy_options_transaction_is_marked.py  0008_rename_is_marked_transaction_is_highlighted.py  0009_transaction_parent.py  0010_remove_transaction_is_ready_and_more.py  0011_alter_recordproxy_id_alter_transaction_records.py  0012_recordproxy_account_recordproxy_category_and_more.py  0013_alter_account_iban.py  0014_transaction_date_created.py  0015_alter_transaction_date_created.py
transactions/: asgi.py  urls.py  wsgi.py
transactions/settings/: base.py  dev.py  prod.py
